<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- MainActivity Strings -->
    <string name="app_name">MaterialOS</string>
    <string name="package_name">"org.materialos.icons"</string>
    <string name="theme_description">MaterialOS is a free and open source Material Design icon pack.</string>

    <!-- Muzei Stuff -->
    <string name="artsource_name">"MaterialOS"</string>
    <string name="artsource_desc">"Material Design Wallpapers"</string>
    <string name="muzei_settings">Muzei Settings</string>
    <string name="json_file_url">"https://raw.githubusercontent.com/materialos/Android-Icon-Pack/master/Wallpapers/wallpapers.json"</string>
    <!-- Sharing wallpaper from Muzei -->
    <string name="partone">"My wallpaper for today is "</string>
    <string name="parttwo">" by "</string>
    <string name="partthree">" from "</string>
    <string name="partfour">".\nGet it now at "</string>

    <!-- Icon Pack designer/owner e-mail -->
    <string name="email_id">materialopensource@gmail.com</string>

    <!-- Mail subjects for simple e-mail and requests e-mail -->
    <string name="email_subject">"MaterialOS"</string>
    <string name="email_request_subject">"MaterialOS - Icon Requests"</string>

    <!-- This are the strings for the cards in the main screen -->
    <string name="welcome_title">Welcome to MaterialOS</string>

    <!-- Feature picture that appears above the description -->
    <string name="theme_feature">icons_banner</string>

    <!-- Previews Pictures Names -->
    <string name="theme_preview1">preview</string>

    <!-- Tabs Names list -->
    <string-array name="tabs">
        <item>NEW</item>
        <item>ALL</item>
        <item>GOOGLE</item>
        <item>GAMES</item>
    </string-array>

    <!-- Strings for Wallpapers and Requests -->
    <string name="request_save_location">"/MaterialOS/Requests/"</string>
    <string name="walls_save_location">"/MaterialOS/Wallpapers/"</string>
    <string name="walls_prefix_name">"MaterialOS_"</string>

    <!-- Messages shown when using LicenseChecker -->
    <string name="license_failed">"You haven't downloaded MaterialOS from Google Play Store. You have two options:"</string>
    <string name="license_success">"Thank you for downloading MaterialOS. If you like it, don't forget to rate and write a review at Google Play Store."</string>

    <!-- Texts you don't want to get when user downloads that wallpapers -->
    <!-- Examples: the url of the wall, and prefixes, etc. -->
    <!-- It replaces the texts in the order as shown. I.e. url is
    https://raw.githubusercontent.com/MinDesigns/MinDesigns-Wallpapers/master/Wallpapers/Lines/Circles/Text/text/whatever/WallpaperName.png"
     it will delete texts in this order:
     1. https://raw.githubusercontent.com/MinDesigns/MinDesigns-Wallpapers/master/Wallpapers/
     2. Lines
     3. Circles
     4. Text
     5. text
     6. whatever
     7. (Empty text won't replace anything else).
     And at the end the only text that will stay is "WallpaperName.png" which will be the final name of downloaded file.
     -->
    <string name="replace_one">"https://raw.githubusercontent.com/MinDesigns/MinDesigns-Wallpapers/master/Wallpapers/"</string>
    <string name="replace_two">"Lines"</string>
    <string name="replace_three">"Circles"</string>
    <string name="replace_four">"Text"</string>
    <string name="replace_five">"text"</string>
    <string name="replace_six">"whatever"</string>
    <string name="replace_seven">""</string>

    <!-- These things are needed for some launchers (Feel free to edit, though is not needed) -->
    <string name="theme_title">@string/app_name</string>
    <string name="theme_name">@string/theme_title</string>
    <string name="theme_info">@string/theme_description</string>
    <string name="theme_ad_msg">@string/theme_description</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="designer">"Designer: "</string>
    <string name="share_name">the MaterialOS project</string>


    <!-- List Of Drawer Sections -->
    <string name="home">Home</string>
    <string name="icons">Icons</string>
    <string name="apply">Apply</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="icon_request">Icon Request</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>

    <!-- Wallpapers Activity -->
    <string name="title_activity_detailed_wallpaper">Detailed Wallpaper</string>
    <string name="title_ab_detailed_wallpaper" />

    <!-- Muzei Stuff -->
    <string name="muzeisets_title">Refresh Source every:</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="muzei_info">Note: This Settings may affect the update time of the Wallpapers info.</string>
    <string name="justshare">Share</string>

    <!-- Strings for Dropdown Menu & Requests -->
    <string name="share">Share theme</string>
    <string name="share_via">Share via</string>
    <string name="send_via">Send via</string>
    <string name="rate">Rate theme</string>
    <string name="sendemail">Email developer</string>
    <string name="changelog">See changelog</string>

    <!-- Sharing theme -->
    <string name="share_one">"Check out this awesome icon pack by "</string>
    <string name="share_two">".\nGet it now at "</string>

    <!-- LauncherNotInstalled Dialog -->
    <string name="lni_title">" Not Installed"</string>
    <string name="lni_content">" is currently not installed in your device.\nWould you like to install it from Google Play Store?"</string>
    <string name="cm_dialog_content">" is part of CyanogenMod (based) roms.\nWould you like to install it in your device?"</string>
    <string name="gnl_title">Google Now Launcher Not Compatible</string>
    <string name="gnl_content">Google Now Launcher is NOT compatible with ANY Icon Packs. Please don\'t low rate the pack for this reason. There\'s a workaround that you can try by yourself, and it\'s the use of an external app that will help you apply the icons. Would you like to download it?</string>
    <string name="extraapp">com.momocode.shortcuts</string>
    <string name="lni_yes">Yes</string>
    <string name="lni_no">No</string>
    <string name="updateninelauncher">Please update Nine Launcher to latest version</string>

    <string name="installed">Installed</string>
    <string name="noninstalled">Not Installed</string>

    <!-- Changelog Dialog Content -->
    <string name="changelog_dialog_title">Changelog</string>
    <string name="nice">great</string>

    <!-- Wallpapers Stuff -->
    <string name="no_conn_title">No Connection Found</string>
    <string name="no_conn_content">Wallpapers are stored on Cloud Server. Please connect to Internet and try again.</string>
    <string name="download">DOWNLOAD</string>
    <string name="download_done">Download completed successfully Picture is located at </string>
    <string name="set_as">Crop picture and set as…</string>
    <string name="set_wall_title">Wallpaper set</string>
    <string name="set_wall_content">Please, choose an option. Would you like to crop the picture? Or do you prefer to set it in its actual size?</string>
    <string name="crop_wall">Crop Wall</string>
    <string name="set_it">Set it now!</string>
    <string name="save">Save</string>
    <string name="done">Done!</string>
    <string name="progress_dialog_title">Downloading wallpaper</string>
    <string name="setting_wall_title">Setting pic as wallpaper</string>
    <string name="please_wait">Please wait…</string>
    <string name="set_as_wall_done">Picture set as wallpaper successfully Go to Home screen and check it.</string>
    <string name="error">Error</string>
    <string name="wall_error">Sorry, previous action wasn\'t actually applied, because it seems there\'s no picture. Check your Internet connection and try again.</string>
    <string name="json_error_toast">Error while downloading wallpapers info. Try again later.</string>

    <!-- License Check Dialog -->
    <string name="license_failed_title">License Check Failed</string>
    <string name="license_success_title">License Check Success</string>
    <string name="exit">Exit App</string>

    <!-- Some texts for Dialogs and Cards -->
    <string name="close">Close</string>
    <string name="advice">Advice</string>
    <string name="dontshow">Don\'t show again</string>
    <string name="play">PLAY STORE</string>
    <string name="web">WEBSITE</string>
    <string name="github">GITHUB</string>
    <string name="gplus">GOOGLE+</string>
    <string name="ratebtn">RATE</string>

    <!-- Requests -->
    <string name="loading_unthemed_apps">Loading unthemed apps. This may take a while…</string>
    <string name="building_request">Building Request…</string>
    <string name="request_advice">If you do not select any app for the icon request, it will be automatically generated with all your apps.</string>
    <!-- Content in Request mails before the unthemed apps info -->
    <string name="request_precontent">These apps are not themed.\n\n</string>
    <string name="donate_this_level">Donate This Level</string>

</resources>
