<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <com.melnykov.fab.ObservableScrollView
        android:id="@+id/HomeContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/infocard"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/no_height"
                android:clickable="false"
                card_view:cardBackgroundColor="@color/primary"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/no_height">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cards_margin"
                    android:paddingLeft="@dimen/cards_margin"
                    android:paddingRight="@dimen/cards_margin">

                    <ImageView
                        android:id="@+id/iconsbanner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons_banner"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iconsbanner"
                        android:layout_margin="@dimen/cards_text_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/welcometest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|top"
                            android:text="@string/welcome_title"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_big" />

                        <TextView
                            android:id="@+id/welcome_contenttest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_marginBottom="@dimen/cards_text_margin"
                            android:layout_marginTop="@dimen/cards_text_margin"
                            android:lineSpacingMultiplier="1.2"
                            android:text="@string/theme_description"
                            android:textColor="@color/primary_light"
                            android:textSize="@dimen/text_small" />

                        <Button
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:text="RATE"
                            android:id="@+id/rate_button"
                            android:layout_gravity="center|bottom"
                            android:textColor="@color/navbar"
                            android:padding="@dimen/cards_margin"
                            android:layout_marginBottom="@dimen/margin_medium_th"
                            android:layout_marginTop="@dimen/dialog_margin"
                            android:textSize="@dimen/text_med"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:elevation="4dp"
                            android:background="@drawable/rate_button"
                            android:elegantTextHeight="false" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/description"
                        android:orientation="horizontal">



                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:visibility="gone"
                android:id="@+id/cardView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/infocard"
                android:layout_margin="@dimen/cards_margin"
                card_view:cardBackgroundColor="@color/cardsbg"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/cards_elevation">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/cards_margin"
                    android:paddingRight="@dimen/cards_margin"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:minWidth="100dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_playstore_logo" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:id="@+id/cardDivider"
                            android:layout_width="fill_parent"
                            android:layout_height="1px"
                            android:background="@color/divider_grey"
                            android:visibility="invisible" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/play_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:background="?selectableItemBackgroundBorderless"
                                android:gravity="end"
                                android:padding="@dimen/cards_padding"
                                android:text="@string/play"
                                android:textColor="@color/accent"
                                android:textSize="@dimen/text_ultrasmall"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:visibility="gone"
                android:id="@+id/cardOne"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView"
                android:layout_margin="@dimen/cards_margin"
                card_view:cardBackgroundColor="@color/cardsbg"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/cards_elevation">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/cards_margin"
                    android:paddingRight="@dimen/cards_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:minWidth="100dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_appone_logo" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1px"
                            android:background="@color/divider_grey"
                            android:visibility="invisible" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_gravity="end"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/appone_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:background="?selectableItemBackgroundBorderless"
                                android:gravity="end"
                                android:padding="@dimen/cards_padding"
                                android:text="@string/download"
                                android:textColor="@color/accent"
                                android:textSize="@dimen/text_ultrasmall"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:visibility="gone"
                android:id="@+id/cardTwo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardOne"
                android:layout_margin="@dimen/cards_margin"
                card_view:cardBackgroundColor="@color/cardsbg"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/cards_elevation">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/cards_margin"
                    android:paddingRight="@dimen/cards_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:minWidth="100dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_apptwo_logo" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1px"
                            android:background="@color/divider_grey"
                            android:visibility="invisible" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_gravity="end"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/apptwo_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:background="?selectableItemBackgroundBorderless"
                                android:gravity="end"
                                android:padding="@dimen/cards_padding"
                                android:text="@string/download"
                                android:textColor="@color/accent"
                                android:textSize="@dimen/text_ultrasmall"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:visibility="gone"
                android:id="@+id/cardThree"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardTwo"
                android:layout_margin="@dimen/cards_margin"
                card_view:cardBackgroundColor="@color/cardsbg"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/cards_elevation">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/cards_margin"
                    android:paddingRight="@dimen/cards_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:minWidth="100dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_appthree_logo" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1px"
                            android:background="@color/divider_grey"
                            android:visibility="invisible" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_gravity="end"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/appthree_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:background="?selectableItemBackgroundBorderless"
                                android:gravity="end"
                                android:padding="@dimen/cards_padding"
                                android:text="@string/download"
                                android:textColor="@color/accent"
                                android:textSize="@dimen/text_ultrasmall"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </com.melnykov.fab.ObservableScrollView>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/apply_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/cards_padding"
        android:layout_marginEnd="@dimen/cards_padding"
        android:layout_marginRight="@dimen/cards_padding"
        android:src="@drawable/ic_apply_icons" />

</RelativeLayout>